<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/dark_green"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/tbLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleTextColor="@color/black"
            android:background="@color/dark_green"/>
    </com.google.android.material.appbar.AppBarLayout>
    
    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_aposentadoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbLayout"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/llViewsWrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvGreeting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="13dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_genero"/>

        <RadioGroup
            android:id="@+id/rgGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/rbMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masculino"/>

            <RadioButton
                android:id="@+id/rbFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Feminino"/>
            </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_idade"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/etIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_idade"
            android:inputType="number"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_calc"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"/>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>